# photo_metamark

./: .dockerignore  .gitignore  README.md  buildit.sh  cli.py  metamark.sh  pyproject.toml  requirements.txt
docker/: Dockerfile.slim  docker-compose.yml  entrypoint-slim.sh
metatag/: __init__.py  extractor.py  logger.py  pipeline.py  tagger.py  utils.py
prompts/: default.txt  detections.txt
